Fixed issue with truncating message and with side scrolling on the chat page. message now has word-wrap and body of page had overflow:hidden

--- a/style/base.css
+++ b/style/base.css
@@ -3,19 +3,23 @@ html, body {
   padding: 0;
   font-size: 10px;
   background-color: #fff;
+  
 }
 
 body {
   height: 100%;
   display: block;
+  overflow: hidden
+
 }
 
 #chat-thread-list {
   height: 91%;
   margin: 0 auto 87px;
-  overflow: auto;
+  overflow-x: hidden;
   padding-bottom: 42px;
-  width:100%;
+  width:95%;
+  
 }
 
 section[role="region"] > header:first-child {
@@ -32,6 +36,7 @@ section[role="region"] {
   right: 0;
   bottom: 0;
   background: #fff;
+  
 }
 
 form[role="search"].bottom {
@@ -41,6 +46,7 @@ form[role="search"].bottom {
   width: 100%;
   left:0;
   right:0;
+  word-wrap:normal;
 }
 
 [data-type="list"] {
