--- a/style/lists.css
+++ b/style/lists.css
@@ -122,7 +122,7 @@
   background: #fff no-repeat left center / 100% auto;
   font: 0/0 a;
   display: block;
-  overflow: hidden;
+  
 }
 
 [data-type="list"] aside img {
@@ -137,7 +137,8 @@
 
 /* Text content */
 [data-type="list"] li p {
-  white-space: nowrap;
+  white-space: normal;
+  word-wrap:break-word;
   overflow: hidden;
   text-overflow: ellipsis;
   border: none;
